--- a/.fonts.yaml
+++ b/.fonts.yaml
@@ -66,28 +66,23 @@ font:
       ]
 
   - file: 'fonts/materialdesignicons-webfont.ttf'
-    id: weather_font_55
-    size: 55
+    id: wind_font
+    size: 45
     glyphs: [
       # Weather
-      "\U000F0590", # mdi-weather-cloudy
-      "\U000F0594", # mdi-weather-night
-      "\U000F0591", # mdi-weather-fog
-      "\U000F0592", # mdi-weather-hail
-      "\U000F0593", # mdi-weather-lightning
-      "\U000F067E", # mdi-weather-lightning-rainy
-      "\U000F0595", # mdi-weather-partly-cloudy
-      "\U000F0596", # mdi-weather-pouring
-      "\U000F0597", # mdi-weather-rainy
-      "\U000F0598", # mdi-weather-snowy
-      "\U000F067F", # mdi-weather-snowy-rainy
-      "\U000F0599", # mdi-weather-sunny
-      "\U000F059B", # mdi-weather-sunset-down
-      "\U000F059C", # mdi-weather-sunset-up
       "\U000F059D", # mdi-weather-windy
-      "\U000F059E", # mdi-weather-windy-variant
+      "\U000F059E" # mdi-weather-windy-variant
       ]
-      
+
+  - file: 'fonts/materialdesignicons-webfont.ttf'
+    id: sun_font
+    size: 40
+    glyphs: [
+      # Weather
+      "\U000F059C", # sun up
+      "\U000F059B" # sun down
+      ]
+
   - file: 'fonts/materialdesignicons-webfont.ttf'
     id: icon_font_small
     size: 25
