--- a/.sensors.yaml
+++ b/.sensors.yaml
@@ -1,3 +1,17 @@
+#binary_sensor:
+#  - platform: homeassistant
+#    entity_id: binary_sensor.contact_sensor_3
+#    id: gym_door
+#    device_class: door
+#  - platform: homeassistant
+#    entity_id: binary_sensor.server_door
+#    id: server_door
+#    device_class: door
+#  - platform: homeassistant
+#    entity_id: binary_sensor.contact_sensor_2
+#    id: main_door
+#    device_class: door
+
 sensor:
   # Kitchen
   - platform: homeassistant
@@ -78,3 +92,33 @@ sensor:
   - platform: homeassistant
     entity_id: sensor.sun_next_setting
     id: sunsetting
+
+  - platform: homeassistant
+    entity_id: sensor.grange_thunderstorm_probability_day_0d
+    id: stormd0
+  - platform: homeassistant
+    entity_id: sensor.grange_thunderstorm_probability_day_1d
+    id: stormd1
+  - platform: homeassistant
+    entity_id: sensor.grange_thunderstorm_probability_day_2d
+    id: stormd2
+
+text_sensor:
+  - platform: homeassistant
+    entity_id: weather.grange_2
+    id: weathernow
+
+  - platform: homeassistant
+    entity_id: weather.grange_2
+    attribute: forecast
+    id: accuweatherfore
+    internal: yes
+
+  - platform: sun
+    type: sunrise
+    format: "%H:%M"
+    id: sunrise_hour
+  - platform: sun
+    type: sunset
+    format: "%H:%M"
+    id: sunset_hour
