--- a/carta-diggitale.yaml
+++ b/carta-diggitale.yaml
@@ -15,8 +15,8 @@ logger:
 
 wifi:
   ssid: !secret wifi_ssid
-  password: !secret wifi_password    
-
+  password: !secret wifi_password
+     
 api:
   encryption:
     key: !secret ha_api
@@ -43,6 +43,12 @@ json:
 <<: !include .sensors.yaml
 <<: !include .fonts.yaml
 
+binary_sensor:
+  - platform: homeassistant
+    entity_id: binary_sensor.0x54ef441000772d70_occupancy
+    id: motion_kitchen
+
+
 display:
   - platform: waveshare_epaper
     id: epaper  
@@ -52,8 +58,8 @@ display:
     reset_pin: GPIO26
     model: 7.50inV2alt
     rotation: 90
-    update_interval: 5min
-    reset_duration: 4ms
+    update_interval: 15min
+    #reset_duration: 4ms
 
     lambda: |-
       ESP_LOGI("display", "Updating...");
@@ -221,8 +227,8 @@ display:
       //weather
       int stormvalue = 25;
 
-      int weath_ico1 = 485;
-      int weath_txt1 = 550;
+      int weath_ico1 = 465;
+      int weath_txt1 = 530;
       int weath_ico2 = 570;
       int weath_txt2 = 605;
 
